--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{{ page.title || site.title }}</title>
 
-{% seo %}
+{% seo title=false %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     {% include head-custom.html %}
   </head>
@@ -14,17 +15,7 @@
 
       {{ content }}
 
-      {% if site.title and site.title != page.title %}
-      <p class="site-title"><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></p>
-      {% endif %}
-
-      {% if site.github.private != true and site.github.license %}
-      <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
-        This site is open source. {% github_edit_link "Improve this page" %}.
-      </div>
-      {% endif %}
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
-    <script>anchors.add();</script>
+    <footer class="site-title"><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></footer>
   </body>
 </html>
